# fastapi

./: database.db  main.py  pyproject.toml
core/: config.py  database.py  dependencies.py  security.py
models/: __init__.py  item.py  user.py
routers/: __init__.py  auth.py  items.py
tests/: conftest.py  test_auth.py  test_items.py
