[project]
name = "fastapi-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "pymysql>=1.2.0",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.47.0",
    "pyjwt>=2.10.1",
    "bcrypt>=4.2.0",
    "python-multipart>=0.0.9",
    "pytest>=8.0.0",
    "httpx>=0.28.0",
]
